--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -7,6 +7,8 @@
       id=""
       placeholder="Search Friend"
     />
-    <input type="button" name="Submit" class="main__form--button" />
+    <button type="button" value=">" name="Submit" class="main__form--button">
+      <i class="fas fa-user-friends main__form--button--icon"></i>
+    </button>
   </form>
 </main>
