--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -31,13 +31,25 @@ page {
       height: 20px;
       background-color: #d1e0e0;
       border: none;
-      padding-left: 5px; }
+      border-radius: 25px;
+      padding-left: 15px; }
     .main__form--button {
       height: 20px;
       width: 50px;
       margin-left: 5px;
       background-color: #2b6c7b;
-      border: none; }
+      border: white;
+      border-radius: 15px;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-transform: lowercase; }
+
+.fas {
+  height: 10px;
+  width: 10px;
+  color: white; }
 
 .footer {
   background: #89a8a7;
