--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -18,14 +18,26 @@
       height: 20px;
       background-color: rgb(209, 224, 224);
       border: none;
-      padding-left: 5px;
+      border-radius: 25px;
+      padding-left: 15px;
     }
     &--button {
       height: 20px;
       width: 50px;
       margin-left: 5px;
       background-color: #2b6c7b;
-      border: none;
+      border: white;
+      border-radius: 15px;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-transform: lowercase;
     }
   }
+}
+.fas {
+  height: 10px;
+  width: 10px;
+  color: white;
 }
