--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5,11 +5,12 @@
 
 page {
   height: 100vh;
-  width: 100vw; }
+  width: 100vw;
+  overflow: scroll; }
 
 .header {
   margin: 0;
-  height: 20vh;
+  height: 100px;
   width: 100%; }
   .header__img {
     height: 75px;
@@ -18,9 +19,9 @@ page {
 .main {
   background: white;
   background: linear-gradient(180deg, white 0%, #89a8a7 100%);
-  height: 70vh; }
+  height: 700px; }
   .main__form {
-    height: 100px;
+    height: 35px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -45,15 +46,52 @@ page {
       justify-content: center;
       align-items: center;
       text-transform: lowercase; }
+      .main__form--button--icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 10px;
+        width: 10px;
+        color: white; }
+  .main__section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow: scroll;
+    scroll-behavior: smooth;
+    height: 568px;
+    border: #2b6c7b solid 1px;
+    border-radius: 5px;
+    margin: 20px; }
+    .main__section--container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 188px;
+      width: 100%; }
+      .main__section--container--img {
+        height: 125px;
+        width: 90px; }
+      .main__section--container--text {
+        font-family: "Arimo", sans-serif;
+        font-size: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 5px;
+        color: #102a30; }
 
-.fas {
-  height: 10px;
-  width: 10px;
-  color: white; }
+#demo {
+  box-shadow: 0px 0px 19px -1px rgba(43, 108, 123, 0.7); }
+
+.friended {
+  border: #ffffff 1px solid; }
 
 .footer {
   background: #89a8a7;
-  height: 10vh;
+  height: 132px;
   width: 100%;
   border-top: #89a8a7; }
 
