--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -11,4 +11,21 @@
       <i class="fas fa-user-friends main__form--button--icon"></i>
     </button>
   </form>
+  <div>
+    <section class="main__section" id="demo">
+      <div class="main__section--container">
+        <img
+          class="main__section--container--img"
+          id=""
+          src="./assets/images/tay-billboard.jpg"
+          alt=""
+        />
+        <div class="main__section--container--text">
+          <h1 class="main__section--container--text--name">Nombre</h1>
+          <h3 class="main__section--container--text--city">Ciudad</h3>
+          <h3 class="main__section--container--text--user">Usuario</h3>
+        </div>
+      </div>
+    </section>
+  </div>
 </main>
