--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -5,9 +5,9 @@
     rgba(255, 255, 255, 1) 0%,
     rgba(137, 168, 167, 1) 100%
   );
-  height: 70vh;
+  height: 700px;
   &__form {
-    height: 100px;
+    height: 35px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -33,11 +33,54 @@
       justify-content: center;
       align-items: center;
       text-transform: lowercase;
+      &--icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 10px;
+        width: 10px;
+        color: white;
+      }
+    }
+  }
+  &__section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow: scroll;
+    scroll-behavior: smooth;
+    height: 568px;
+    border: #2b6c7b solid 1px;
+    border-radius: 5px;
+    margin: 20px;
+    &--container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 188px;
+      width: 100%;
+      &--img {
+        height: 125px;
+        width: 90px;
+      }
+      &--text {
+        font-family: "Arimo", sans-serif;
+        font-size: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 5px;
+        color: #102a30;
+      }
     }
   }
 }
-.fas {
-  height: 10px;
-  width: 10px;
-  color: white;
+#demo {
+  -webkit-box-shadow: 0px 0px 19px -1px rgba(43, 108, 123, 0.7);
+  box-shadow: 0px 0px 19px -1px rgba(43, 108, 123, 0.7);
+}
+.friended {
+  border: #ffffff 1px solid;
 }
