--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -18,7 +18,7 @@
   </form>
   <div>
     <section class="js-section main__section" id="demo">
-      <div class="js-container main__section--container">
+      <div class="js-container main__section--container" id="">
         <img
           class="js-image main__section--container--img"
           id=""
@@ -26,9 +26,9 @@
           alt=""
         />
         <div class="main__section--container--text">
-          <h1 class="js-name main__section--container--text--name">Nombre</h1>
-          <h3 class="js-city main__section--container--text--city">Ciudad</h3>
-          <h3 class="js-user main__section--container--text--user">Usuario</h3>
+          <h1 class="js-name main__section--container--text--name"></h1>
+          <h3 class="js-city main__section--container--text--city"></h3>
+          <h3 class="js-user main__section--container--text--user"></h3>
         </div>
       </div>
     </section>
