--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,12 +1,14 @@
 * {
   box-sizing: border-box;
   text-decoration: none;
-  margin: 0; }
+  margin: 0;
+  list-style-type: none; }
 
 page {
   height: 100vh;
   width: 100vw;
-  overflow: scroll; }
+  overflow: scroll;
+  text-decoration: none; }
 
 .header {
   margin: 0;
@@ -19,7 +21,7 @@ page {
 .main {
   background: white;
   background: linear-gradient(180deg, white 0%, #89a8a7 100%);
-  height: 700px; }
+  height: 580px; }
   .main__form {
     height: 35px;
     width: 100%;
@@ -59,10 +61,11 @@ page {
     grid-template-columns: 1fr 1fr;
     overflow: scroll;
     scroll-behavior: smooth;
-    height: 568px;
+    height: 450px;
     padding: 0;
     border: #2b6c7b solid 1px;
     border-radius: 5px;
+    box-shadow: 0px 0px 19px -1px rgba(43, 108, 123, 0.7);
     margin: 20px; }
     .main__section--container {
       display: flex;
@@ -92,15 +95,13 @@ page {
         .main__section--container--text--city {
           font-family: "Arimo", sans-serif;
           font-size: 13px;
-          color: #102a30; }
+          color: #102a30;
+          margin-bottom: 10px; }
         .main__section--container--text--user {
           font-family: "Arimo", sans-serif;
           font-size: 13px;
           color: #102a30;
           margin-top: 5px; }
-
-#demo {
-  box-shadow: 0px 0px 19px -1px rgba(43, 108, 123, 0.7); }
 
 .friended {
   border: #ffffff 1px solid; }
