--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,1 +1,7 @@
-<footer class="footer"></footer>
+<footer class="footer">
+  <ul class="footer__list">
+    <li class="footer__list--item">Acerca de</li>
+    <li class="footer__list--item">Contacto</li>
+    <li class="footer__list--item">Asistencia</li>
+  </ul>
+</footer>
