--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -5,7 +5,7 @@
     rgba(255, 255, 255, 1) 0%,
     rgba(137, 168, 167, 1) 100%
   );
-  height: 700px;
+  height: 580px;
   &__form {
     height: 35px;
     width: 100%;
@@ -49,11 +49,14 @@
     grid-template-columns: 1fr 1fr;
     overflow: scroll;
     scroll-behavior: smooth;
-    height: 568px;
+    height: 450px;
     padding: 0;
     border: #2b6c7b solid 1px;
     border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 19px -1px rgba(43, 108, 123, 0.7);
+    box-shadow: 0px 0px 19px -1px rgba(43, 108, 123, 0.7);
     margin: 20px;
+
     &--container {
       display: flex;
       flex-direction: column;
@@ -86,6 +89,7 @@
           font-family: "Arimo", sans-serif;
           font-size: 13px;
           color: #102a30;
+          margin-bottom: 10px;
         }
         &--user {
           font-family: "Arimo", sans-serif;
@@ -97,10 +101,7 @@
     }
   }
 }
-#demo {
-  -webkit-box-shadow: 0px 0px 19px -1px rgba(43, 108, 123, 0.7);
-  box-shadow: 0px 0px 19px -1px rgba(43, 108, 123, 0.7);
-}
+
 .friended {
   border: #ffffff 1px solid;
 }
